fix z-index issue

--- a/src/components/pages/AlphabeticComparisonPage/SearchBox.module.scss
+++ b/src/components/pages/AlphabeticComparisonPage/SearchBox.module.scss
@@ -28,7 +28,7 @@
     //   width: 400px;
     // }
     position: absolute;
-    z-index: 1050;
+    z-index: 1021;
     width: 400px;
     top: 35px;
 
